--- a/report/mendeleybib.bib
+++ b/report/mendeleybib.bib
@@ -1,16 +1,130 @@
-@incollection{Helgaker1995,
-author = {Helgaker, Trygve and Taylor, Peter R},
-booktitle = {Modern Electronic Structure Theory},
-doi = {10.1142/9789812832115\_0001},
-file = {:Users/henriksveinsson/Documents/Mendeley Desktop/ModElectStructTheory\_GaussianBasisIntegrals\_1995.pdf:pdf},
-pages = {725--856},
-title = {{Gaussian Basis Sets and Molecular Integrals}},
-year = {1995}
+@article{Hehre1970,
+author = {Hehre, W. J.},
+doi = {10.1063/1.1673374},
+issn = {00219606},
+journal = {The Journal of Chemical Physics},
+keywords = {STO-3G Na-Ar},
+mendeley-tags = {STO-3G Na-Ar},
+number = {5},
+pages = {2769},
+title = {{Self-Consistent Molecular Orbital Methods. IV. Use of Gaussian Expansions of Slater-Type Orbitals. Extension to Second-Row Molecules}},
+url = {http://scitation.aip.org/content/aip/journal/jcp/52/5/10.1063/1.1673374},
+volume = {52},
+year = {1970}
 }
-@techreport{Sherrill2000,
-author = {Sherrill, C David},
-file = {:Users/henriksveinsson/Documents/Mendeley Desktop/hf-intro.pdf:pdf},
-pages = {1--8},
-title = {{An Introduction to Hartree-Fock Molecular Orbital Theory What Problem Are We Solving ? Motivation and the Hartree Product}},
-year = {2000}
+@article{Hehre1969,
+author = {Hehre, W. J.},
+doi = {10.1063/1.1672392},
+issn = {00219606},
+journal = {The Journal of Chemical Physics},
+keywords = {STO3G H-Ne},
+mendeley-tags = {STO3G H-Ne},
+number = {6},
+pages = {2657},
+title = {{Self-Consistent Molecular-Orbital Methods. I. Use of Gaussian Expansions of Slater-Type Atomic Orbitals}},
+url = {http://scitation.aip.org/content/aip/journal/jcp/51/6/10.1063/1.1672392},
+volume = {51},
+year = {1969}
+}
+@article{Krishnan1980,
+author = {Krishnan, R. and Binkley, J. S. and Seeger, R. and Pople, J. A.},
+doi = {10.1063/1.438955},
+issn = {00219606},
+journal = {The Journal of Chemical Physics},
+keywords = {6-311G H-Ne},
+mendeley-tags = {6-311G H-Ne},
+number = {1},
+pages = {650},
+title = {{Self-consistent molecular orbital methods. XX. A basis set for correlated wave functions}},
+url = {http://scitation.aip.org/content/aip/journal/jcp/72/1/10.1063/1.438955},
+volume = {72},
+year = {1980}
+}
+@misc{Wikipedia,
+author = {Wikipedia},
+title = {{Electromagnetic absorption by water}},
+url = {http://en.wikipedia.org/wiki/Electromagnetic\_absorption\_by\_water}
+}
+@article{Sanderson2011,
+author = {Sanderson, Conrad and Box, P O and Lucia, St},
+file = {:Users/henriksveinsson/Documents/Mendeley Desktop/armadillo\_nicta\_2010.pdf:pdf},
+title = {{Armadillo : An Open Source C ++ Linear Algebra Library for Fast Prototyping and Computationally Intensive Experiments Technical Report}},
+year = {2011}
+}
+@book{thijssen2007computational,
+author = {Thijssen, Jos},
+publisher = {Cambridge University Press},
+title = {{Computational physics}},
+year = {2007}
+}
+@article{Schuchardt2007,
+abstract = {Basis sets are some of the most important input data for computational models in the chemistry, materials, biology, and other science domains that utilize computational quantum mechanics methods. Providing a shared, Web-accessible environment where researchers can not only download basis sets in their required format but browse the data, contribute new basis sets, and ultimately curate and manage the data as a community will facilitate growth of this resource and encourage sharing both data and knowledge. We describe the Basis Set Exchange (BSE), a Web portal that provides advanced browsing and download capabilities, facilities for contributing basis set data, and an environment that incorporates tools to foster development and interaction of communities. The BSE leverages and enables continued development of the basis set library originally assembled at the Environmental Molecular Sciences Laboratory.},
+author = {Schuchardt, Karen L and Didier, Brett T and Elsethagen, Todd and Sun, Lisong and Gurumoorthi, Vidhya and Chase, Jared and Li, Jun and Windus, Theresa L},
+doi = {10.1021/ci600510j},
+file = {:Users/henriksveinsson/Documents/Mendeley Desktop/ci600510j.pdf:pdf},
+issn = {1549-9596},
+journal = {Journal of chemical information and modeling},
+number = {3},
+pages = {1045--52},
+pmid = {17428029},
+title = {{Basis set exchange: a community database for computational sciences.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/17428029},
+volume = {47},
+year = {2007}
+}
+@misc{,
+title = {{EMSL Basis Set Exchange}},
+url = {https://bse.pnl.gov/bse/portal}
+}
+@techreport{Standard2013,
+author = {Standard, Jean M.},
+title = {{Performance of Hartree-Fock and Correlated Methods}},
+url = {http://chemistry.illinoisstate.edu/standard/che460/handouts/460performance.pdf},
+year = {2013}
+}
+@book{lide2004crc,
+author = {Lide, David R},
+publisher = {CRC press},
+title = {{CRC handbook of chemistry and physics}},
+year = {2004}
+}
+@misc{,
+title = {{Beryllium: bond enthalpies in gaseous diatomic species}},
+url = {http://www.webelements.com/beryllium/bond\_enthalpies.html}
+}
+@misc{Internet,
+author = {Internet},
+booktitle = {WebElements, Hydrogen},
+title = {{Hydrogen: bond enthalpies in gaseous diatomic species}},
+url = {http://www.webelements.com/hydrogen/bond\_enthalpies.html}
+}
+@article{Moskowitz1981,
+author = {Moskowitz, Jules W},
+file = {:Users/henriksveinsson/Documents/Mendeley Desktop/560200508\_ftp.pdf$\backslash$;jsessionid=119E314FA51E8B5C3D5889238410B79F.f02t01.pdf:pdf},
+pages = {1107--1119},
+title = {{A New Look at Correlations in Atomic and Molecular Systems . I . Application of Fermion Monte Carlo Variational Met hod *}},
+volume = {XX},
+year = {1981}
+}
+@article{binkley1980self,
+author = {Binkley, J Stephen and Pople, John A and Hehre, Warren J},
+journal = {Journal of the American Chemical Society},
+keywords = {3-21G H-Ne},
+mendeley-tags = {3-21G H-Ne},
+number = {3},
+pages = {939--947},
+publisher = {ACS Publications},
+title = {{Self-consistent molecular orbital methods. 21. Small split-valence basis sets for first-row elements}},
+volume = {102},
+year = {1980}
+}
+@article{gordon1982basis,
+author = {Gordon, M S and Binkley, J S and Pople, J A and Pietro, W J and Hehre, W J},
+journal = {Am. Chem. Soc},
+keywords = {3-21G Na-Ar,4-31G},
+mendeley-tags = {3-21G Na-Ar,4-31G},
+pages = {2797},
+title = {{The basis sets designated 4--31G ($\nu$) and 6--31G$\nu$ $\nu$ in this work contain five d functions rather than the six recommended by J}},
+volume = {104},
+year = {1982}
 }
